<resources>
    <string name="app_name">SIGO UTM</string>

    <!--Textos de Interfaz-->
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="title_activity_current_address">CurrentAddressActivity</string>
    <string name="title_activity_family_address">FamilyAddressActivity</string>
    <string name="title_activity_academic_history">AcademicHistoryActivity</string>
    <string name="title_activity_subject_detail">SubjectDetailActivity</string>

<!--    Textos de interfaz de inicio de sesión-->
    <string name="logo_sigo_desc">Logo SIGO</string>
    <string name="logo_utm_desc">Logotipo UTM</string>

<!--    Textos de Interfaz del perfil-->
    <string name="back">Atrás</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="manage_info">Gestionar Información</string>

    <string name="student_name_placeholder">Lobato Alcantar Wilmer Ernesto</string>
    <string name="profile_active">Perfil activo</string>
    <string name="title_institutional_info">Información Institucional</string>

    <string name="institutional_info_description">Toda la información contenida en el sistema, incluyendo tu email \n
    incluyendo tu email institucional, entra a Gmail de Google,
    agrega esta cuenta y permite su contraseña.</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="label_added_to">Agregado a</string>
    <string name="added_to_value">Gmail de Google</string>

    <string name="email_inst_placeholder">utm241006t@morelia.edu.mx</string>
    <string name="pass_inst_placeholder">2006090+</string>

    <string name="e_book_description">Este es tu usuario y contraseña, para entrar a e-libro.</string>
    <string name="label_user">Usuario</string>

    <string name="user_plataforma_placeholder">utm241006t@butmorelia.edu.mx</string>
    <string name="pass_plataforma_placeholder">pass2024+</string>

<!--    Textos de interfaz Toolbar-->
    <string name="form_title_placeholder">Título del Formulario</string>
    <string name="action_edit">Editar</string>

<!--    Textos de interfaz item subject detail-->
    <string name="subject_name_placeholder">Inglés</string>
    <string name="teacher_name_placeholder">Lic. María Veronica Alvarez Ríos</string>
    <string name="open_detail">Abrir detalle</string>
    <string name="label_progress">Progreso</string>
    <string name="progress_placeholder">100%</string>
    <string name="label_evaluation">Evaluación</string>
    <string name="evaluation_placeholder">Ordinaria</string>
    <string name="label_performance">Desempeño</string>
    <string name="performance_placeholder">E (Estrategico)</string>

    <string name="title_units">UNIDADES TEMÁTICAS</string>
    <string name="units_list_placeholder">Presentación Personal (Estratégico)\nActividades Diarias y de Rutina (Estratégico)</string>

<!--    Textos de interfaz item profile option-->
    <string name="option_icon_principal_desc">Icono de opción principal</string>
    <string name="option_status_desc">Icono de estatus o seguridad</string>
    <string name="option_title_placeholder">Título de la Opción</string>
    <string name="option_subtitle_placeholder">Descripción corta de la sección</string>
    <string name="option_go_to_desc">Ir a la siguiente sección</string>

<!-- Textos de interfaz item cuatrimestre-->
    <string name="cuatrimestre_placeholder">1er cuatrimestre</string>
    <string name="cuatrimestre_periodo_placeholder">Sep - Dic 2024</string>
    <string name="label_carrera">Carrera</string>
    <string name="carrera_placeholder">Tecnologías de la información</string>
    <string name="label_grupo">Grupo</string>
    <string name="grupo_placeholder">1 B Matutino</string>
    <string name="label_tutor">Tutor</string>
    <string name="tutor_placeholder">MATI Gerardo Chávez</string>
    <string name="label_desempeno">Desempeño</string>
    <string name="desempeno_placeholder">A (Autónomo)</string>

<!--Textos de interfaz activity subject detail-->
    <string name="title_subjects">Asignaturas</string>
    <string name="desc_subject_list">Lista de asignaturas del cuatrimestre</string>

<!--    Textos de interfaz activity personal info-->
    <string name="desc_personal_info_form">Formulario de datos personales del estudiante</string>
    <string name="title_personal_info">Información personal</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_paternal_surname">Apellido Paterno</string>
    <string name="hint_maternal_surname">Apellido Materno</string>
    <string name="hint_birth_date">Fecha de nacimiento</string>
    <string name="label_birth_state">Estado de nacimiento</string>
    <string name="label_gender">Sexo</string>
    <string name="hint_curp">CURP</string>
    <string name="hint_nss">Número de Seguridad Social</string>
    <string name="nss_consult_link">No conoces tu Número de Seguridad Social, consúltalo aquí.</string>
    <string name="btn_update">Actualizar</string>

<!--Textos de interfaz activity home-->
    <string name="desc_avatar">Avatar del usuario</string>
    <string name="user_id_placeholder">UTM241005TI</string>
    <string name="quarter_placeholder">4to cuatrimestre</string>
    <string name="desc_notifications">Notificaciones</string>
    <string name="desc_menu">Menú</string>

    <string name="icon_profile_desc">Icono Mi Perfil</string>
    <string name="card_profile_title">Mi Perfil</string>
    <string name="card_profile_subtitle">Datos personales de contacto y más</string>

    <string name="icon_academic_desc">Icono Historial Académico</string>
    <string name="card_academic_title">Historial académico</string>
    <string name="card_academic_subtitle">Estatus, cursos y evaluaciones</string>

<!--    Textos de interfaz activity family address-->
    <string name="title_family_address">Domicilio Familiar</string>
    <string name="hint_postal_code">Código Postal</string>
    <string name="hint_street">Calle</string>
    <string name="hint_num_exterior">Número Exterior</string>
    <string name="hint_num_interior_opt">Número Interior (Opcional)</string>
    <string name="hint_state">Estado</string>
    <string name="hint_city">Municipio / Delegación</string>
    <string name="label_colony">Colonia</string>
    <string name="btn_update_family_address">Actualizar Domicilio Familiar</string>

<!--    Textos de interfaz activity current addres-->
    <string name="title_current_address">Domicilio Actual</string>
    <string name="btn_update_current_address">Actualizar Domicilio Actual</string>

<!--Textos de interfaz de activity contact history-->
    <string name="title_contact">Contacto</string>
    <string name="hint_phone_10">Teléfono (10 Dígitos)</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="title_sos">SOS Contacto de Emergencias</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="label_parentesco">Parentesco / Relación</string>
    <string name="hint_sos_cell">Tel. Celular (10 Dígitos)</string>
    <string name="hint_sos_work_opt">Tel. Trabajo (10 Dígitos / Opcional)</string>

<!--Textos de interfaz  de activity_academic_history-->
    <string name="title_history">Historial académico</string>


</resources>