<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:paddingVertical="12dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/form_title_placeholder"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_dark"/>

    <ImageView
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:contentDescription="@string/action_edit" />
</LinearLayout>